# Agentic-Trip-Planner

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
config/: config.yaml
evaluation/: eval.py
notebook/: experimnts.ipynb
output/: AI_Trip_Planner_2025-10-29_23-57-13.md  AI_Trip_Planner_2025-10-30_03-36-14.md  AI_Trip_Planner_2025-10-30_03-41-01.md  AI_Trip_Planner_2025-10-30_05-14-16.md  AI_Trip_Planner_2025-10-30_05-27-48.md  AI_Trip_Planner_2025-10-30_05-32-37.md  AI_Trip_Planner_2025-10-30_17-37-25.md  AI_Trip_Planner_2025-10-30_17-40-25.md  AI_Trip_Planner_2025-10-30_17-47-29.md  AI_Trip_Planner_2025-10-30_17-57-03.md  AI_Trip_Planner_2025-10-30_18-02-09.md  AI_Trip_Planner_2025-10-30_18-05-24.md  AI_Trip_Planner_2025-10-30_18-10-41.md  AI_Trip_Planner_2025-10-30_18-16-52.md  AI_Trip_Planner_2025-10-30_18-34-27.md  AI_Trip_Planner_2025-11-05_00-21-41.md  AI_Trip_Planner_2025-11-05_01-22-35.md  AI_Trip_Planner_2025-11-12_04-25-21.md
prompt_library/: prompt.py
tools/: currency_conversion_tool.py
utils/: place_info_search.py  save_to_document.py
